--- a/splitwise/analyses/recreate_expenses_with_new_percentage.ipynb
+++ b/splitwise/analyses/recreate_expenses_with_new_percentage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d9b84602",
    "metadata": {},
    "outputs": [],
@@ -10,26 +10,38 @@
     "from splitwise import Splitwise\n",
     "from splitwise.expense import Expense, ExpenseUser\n",
     "import pandas as pd\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "ad4f011c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('keys.yaml', 'r') as file:\n",
+    "    keys = yaml.safe_load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "a44caf8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = Splitwise(consumer_key=\"v3FB9KBu2JItIS8F0RZQMuH01OZUeSJxb6ctwo5W\",\n",
-    "              consumer_secret=\"pWxGIvBfvayxr4BjHDn6CgwHYPC1iDPxEiJcjAkO\",\n",
-    "              api_key=\"cgKMdBJAeqOGOdlqfV4MB42YYW0VnbHkOSyLD76u\")\n",
+    "s = Splitwise(consumer_key=keys['consumer_key'],\n",
+    "              consumer_secret=keys['consumer_secret'],\n",
+    "              api_key=keys['api_key'])\n",
     "\n",
     "u = s.getCurrentUser()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5c776e2d",
    "metadata": {},
    "outputs": [],
@@ -72,9 +84,9 @@
     "            expense_new.addUser(juau)\n",
     "            expense_new.addUser(lana)\n",
     "            expense_new.setGroupId(33823062) # Nossa Residência\n",
-    "            expense_new.setDescription(expense_old.description + '___new')\n",
+    "            expense_new.setDescription(expense_old.description)\n",
     "            # expense_new.setDate(expense_old.date)\n",
-    "            expense_new.setDetails(ano_mes)\n",
+    "            expense_new.setDetails(ano_mes + '\\n recreated with script to update past percentages')\n",
     "            \n",
     "            # pprint(vars(expense_new))\n",
     "            # pprint(vars(expense_new.users[0]))\n",
@@ -94,17 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dc621eea",
    "metadata": {},
    "outputs": [],
    "source": [
     "recreate_expenses_with_new_percentage(\n",
-    "    list_of_expenses = [2415871796, 2374611812], \n",
-    "    percentage_juau = 0.1, \n",
-    "    percentage_lana = 0.9, \n",
-    "    ano_mes = '2023-11', \n",
-    "    delete = False)"
+    "    list_of_expenses = [2193180534, 2316633994, 2374542938, 2388775313, 2388938649, 2388783775, 2390250935, 2420230197, 2420225057, 2420279846, 2420268659, 2420234090, 2420230912, 2420274320, 2420223901, 2420278625, 2420244906, 2423706548, 2423707314, 2423690668, 2423696754, 2423706753, 2423695738, 2423693611, 2423700341, 2423700606, 2423691268, 2423695378, 2423700119, 2423703200, 2423704867, 2423703716, 2423691723, 2423703454, 2423691980, 2423692282, 2423693994, 2423696060, 2439475988, 2439473888, 2439470769, 2439471618, 2439466555, 2439470316, 2439468213, 2439474441, 2441671456, 2441664339, 2441663375, 2441663783, 2441671055, 2441671982, 2465284281, 2465289869, 2465383864, 2465377245, 2465272943, 2465283053, 2465287404, 2465302210, 2465288240, 2465289030, 2465303848, 2465303344, 2465311463], \n",
+    "    percentage_juau = 0.5463, \n",
+    "    percentage_lana = 0.4537, \n",
+    "    ano_mes = '2023-06', \n",
+    "    delete = True)"
    ]
   }
  ],
@@ -124,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
