--- a/splitwise/analyses/refresh splitwise.ipynb
+++ b/splitwise/analyses/refresh splitwise.ipynb
@@ -312,14 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "cdaee42f",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df_1 = get_splitwise_expenses(33823062, 'Nossa Residência', 100)\n",
+    "df_1 = get_splitwise_expenses(33823062, 'Nossa Residência', 500)\n",
     "df_2 = get_splitwise_expenses(34137144, 'VR', 20)\n",
     "df_3 = get_splitwise_expenses(35336773, 'just me', 20)\n",
     "df_4 = get_splitwise_expenses(40055224, 'apenas lana', 20)\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "eb81effc",
    "metadata": {
     "scrolled": true
@@ -384,103 +384,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2415900908</td>\n",
+       "      <td>2169661404</td>\n",
        "      <td>33823062</td>\n",
+       "      <td>whey e creatina</td>\n",
        "      <td>None</td>\n",
-       "      <td>2023-11</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>177.92</td>\n",
        "      <td>João</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
+       "      <td>2023-02-06</td>\n",
+       "      <td>2023-02-06</td>\n",
+       "      <td>2023-02-06</td>\n",
        "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>85.19</td>\n",
        "      <td>João</td>\n",
-       "      <td>90.0</td>\n",
        "      <td>Hallana</td>\n",
-       "      <td>João</td>\n",
        "      <td>Nossa Residência</td>\n",
-       "      <td>testeeee___new</td>\n",
+       "      <td>outros</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2415905360</td>\n",
+       "      <td>2172382778</td>\n",
        "      <td>33823062</td>\n",
-       "      <td></td>\n",
-       "      <td>2023-11</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>João</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
        "      <td>None</td>\n",
-       "      <td>João</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1287.91</td>\n",
        "      <td>Hallana</td>\n",
+       "      <td>2023-02-07</td>\n",
+       "      <td>2023-02-07</td>\n",
+       "      <td>2023-02-07</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1287.91</td>\n",
        "      <td>João</td>\n",
+       "      <td>Hallana</td>\n",
        "      <td>Nossa Residência</td>\n",
-       "      <td>testeeee___new</td>\n",
+       "      <td>QUITE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2415906938</td>\n",
+       "      <td>2178599752</td>\n",
        "      <td>33823062</td>\n",
+       "      <td>assaí</td>\n",
        "      <td>None</td>\n",
-       "      <td>2023-11</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>360.35</td>\n",
        "      <td>João</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
+       "      <td>2023-02-11</td>\n",
+       "      <td>2023-02-11</td>\n",
+       "      <td>2023-02-11</td>\n",
        "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>174.3</td>\n",
        "      <td>João</td>\n",
-       "      <td>90.0</td>\n",
        "      <td>Hallana</td>\n",
-       "      <td>João</td>\n",
        "      <td>Nossa Residência</td>\n",
-       "      <td>testeeee___new</td>\n",
+       "      <td>mercado</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2415907686</td>\n",
+       "      <td>2178602305</td>\n",
        "      <td>33823062</td>\n",
+       "      <td>celular lana</td>\n",
        "      <td>None</td>\n",
-       "      <td>2023-11</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>43.1</td>\n",
        "      <td>João</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
+       "      <td>2023-02-11</td>\n",
+       "      <td>2023-02-11</td>\n",
+       "      <td>2023-02-11</td>\n",
        "      <td>None</td>\n",
-       "      <td>João</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>22.25</td>\n",
        "      <td>Hallana</td>\n",
        "      <td>João</td>\n",
        "      <td>Nossa Residência</td>\n",
-       "      <td>testeeee___new</td>\n",
+       "      <td>contas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2415921153</td>\n",
+       "      <td>2178604190</td>\n",
        "      <td>33823062</td>\n",
+       "      <td>icloud lana</td>\n",
        "      <td>None</td>\n",
-       "      <td>2023-11</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>10.9</td>\n",
        "      <td>João</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>2023-06-09</td>\n",
+       "      <td>2023-02-11</td>\n",
+       "      <td>2023-02-11</td>\n",
+       "      <td>2023-02-11</td>\n",
        "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5.27</td>\n",
        "      <td>João</td>\n",
-       "      <td>90.0</td>\n",
        "      <td>Hallana</td>\n",
-       "      <td>João</td>\n",
        "      <td>Nossa Residência</td>\n",
-       "      <td>testeeee___new</td>\n",
+       "      <td>assinaturas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -503,7 +503,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>155</th>\n",
+       "      <th>555</th>\n",
        "      <td>2465394487</td>\n",
        "      <td>40055224</td>\n",
        "      <td>None</td>\n",
@@ -523,7 +523,7 @@
        "      <td>QUITE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156</th>\n",
+       "      <th>556</th>\n",
        "      <td>2489060689</td>\n",
        "      <td>40055224</td>\n",
        "      <td>None</td>\n",
@@ -543,7 +543,7 @@
        "      <td>almoço ambev</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>157</th>\n",
+       "      <th>557</th>\n",
        "      <td>2489061014</td>\n",
        "      <td>40055224</td>\n",
        "      <td>None</td>\n",
@@ -563,7 +563,7 @@
        "      <td>caponata</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158</th>\n",
+       "      <th>558</th>\n",
        "      <td>2489061354</td>\n",
        "      <td>40055224</td>\n",
        "      <td>None</td>\n",
@@ -583,7 +583,7 @@
        "      <td>cacau show</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>159</th>\n",
+       "      <th>559</th>\n",
        "      <td>2489062495</td>\n",
        "      <td>40055224</td>\n",
        "      <td>None</td>\n",
@@ -604,53 +604,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>160 rows × 17 columns</p>\n",
+       "<p>560 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     expense_id  group_id  name  details     cost created_by        date  \\\n",
-       "0    2415900908  33823062  None  2023-11    100.0       João  2023-06-09   \n",
-       "1    2415905360  33823062        2023-11    100.0       João  2023-06-09   \n",
-       "2    2415906938  33823062  None  2023-11    100.0       João  2023-06-09   \n",
-       "3    2415907686  33823062  None  2023-11    100.0       João  2023-06-09   \n",
-       "4    2415921153  33823062  None  2023-11    100.0       João  2023-06-09   \n",
-       "..          ...       ...   ...      ...      ...        ...         ...   \n",
-       "155  2465394487  40055224  None     None  1048.88       João  2023-07-02   \n",
-       "156  2489060689  40055224  None     None     28.0       João  2023-07-12   \n",
-       "157  2489061014  40055224  None     None     6.49       João  2023-07-12   \n",
-       "158  2489061354  40055224  None     None      2.9       João  2023-07-12   \n",
-       "159  2489062495  40055224  None     None    37.39       João  2023-07-12   \n",
+       "     expense_id  group_id              name details     cost created_by  \\\n",
+       "0    2169661404  33823062   whey e creatina    None   177.92       João   \n",
+       "1    2172382778  33823062              None    None  1287.91    Hallana   \n",
+       "2    2178599752  33823062             assaí    None   360.35       João   \n",
+       "3    2178602305  33823062      celular lana    None     43.1       João   \n",
+       "4    2178604190  33823062       icloud lana    None     10.9       João   \n",
+       "..          ...       ...               ...     ...      ...        ...   \n",
+       "555  2465394487  40055224              None    None  1048.88       João   \n",
+       "556  2489060689  40055224              None    None     28.0       João   \n",
+       "557  2489061014  40055224              None    None     6.49       João   \n",
+       "558  2489061354  40055224              None    None      2.9       João   \n",
+       "559  2489062495  40055224              None    None    37.39       João   \n",
        "\n",
-       "     created_at  updated_at  deleted_at updated_by deleted_by repayments  \\\n",
-       "0    2023-06-09  2023-06-09  2023-06-09       None       João       90.0   \n",
-       "1    2023-06-09  2023-06-09  2023-06-09       None       João       90.0   \n",
-       "2    2023-06-09  2023-06-09  2023-06-09       None       João       90.0   \n",
-       "3    2023-06-09  2023-06-09  2023-06-09       None       João       90.0   \n",
-       "4    2023-06-09  2023-06-09  2023-06-09       None       João       90.0   \n",
+       "           date  created_at  updated_at deleted_at updated_by deleted_by  \\\n",
+       "0    2023-02-06  2023-02-06  2023-02-06       None       None       None   \n",
+       "1    2023-02-07  2023-02-07  2023-02-07       None       None       None   \n",
+       "2    2023-02-11  2023-02-11  2023-02-11       None       None       None   \n",
+       "3    2023-02-11  2023-02-11  2023-02-11       None       None       None   \n",
+       "4    2023-02-11  2023-02-11  2023-02-11       None       None       None   \n",
        "..          ...         ...         ...        ...        ...        ...   \n",
-       "155  2023-07-02  2023-07-02        None       None       None    1048.88   \n",
-       "156  2023-07-12  2023-07-12        None       None       None       28.0   \n",
-       "157  2023-07-12  2023-07-12        None       None       None       6.49   \n",
-       "158  2023-07-12  2023-07-12        None       None       None        2.9   \n",
-       "159  2023-07-12  2023-07-12        None       None       None      37.39   \n",
+       "555  2023-07-02  2023-07-02  2023-07-02       None       None       None   \n",
+       "556  2023-07-12  2023-07-12  2023-07-12       None       None       None   \n",
+       "557  2023-07-12  2023-07-12  2023-07-12       None       None       None   \n",
+       "558  2023-07-12  2023-07-12  2023-07-12       None       None       None   \n",
+       "559  2023-07-12  2023-07-12  2023-07-12       None       None       None   \n",
        "\n",
-       "    repayments_from repayments_to            source        category  \n",
-       "0           Hallana          João  Nossa Residência  testeeee___new  \n",
-       "1           Hallana          João  Nossa Residência  testeeee___new  \n",
-       "2           Hallana          João  Nossa Residência  testeeee___new  \n",
-       "3           Hallana          João  Nossa Residência  testeeee___new  \n",
-       "4           Hallana          João  Nossa Residência  testeeee___new  \n",
-       "..              ...           ...               ...             ...  \n",
-       "155            João       Hallana       apenas lana           QUITE  \n",
-       "156         Hallana          João       apenas lana    almoço ambev  \n",
-       "157         Hallana          João       apenas lana        caponata  \n",
-       "158         Hallana          João       apenas lana      cacau show  \n",
-       "159            João       Hallana       apenas lana           QUITE  \n",
+       "    repayments repayments_from repayments_to            source      category  \n",
+       "0        85.19            João       Hallana  Nossa Residência        outros  \n",
+       "1      1287.91            João       Hallana  Nossa Residência         QUITE  \n",
+       "2        174.3            João       Hallana  Nossa Residência       mercado  \n",
+       "3        22.25         Hallana          João  Nossa Residência        contas  \n",
+       "4         5.27            João       Hallana  Nossa Residência   assinaturas  \n",
+       "..         ...             ...           ...               ...           ...  \n",
+       "555    1048.88            João       Hallana       apenas lana         QUITE  \n",
+       "556       28.0         Hallana          João       apenas lana  almoço ambev  \n",
+       "557       6.49         Hallana          João       apenas lana      caponata  \n",
+       "558        2.9         Hallana          João       apenas lana    cacau show  \n",
+       "559      37.39            João       Hallana       apenas lana         QUITE  \n",
        "\n",
-       "[160 rows x 17 columns]"
+       "[560 rows x 17 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "68729936",
    "metadata": {},
    "outputs": [],
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "5bdfa979",
    "metadata": {},
    "outputs": [],
